guava和org.reflections工具学习

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>guava</module>
         <module>commons-lang3</module>
         <module>reflections</module>
+        <module>utils-api</module>
     </modules>
 
     <packaging>pom</packaging>
